# FITBIR-study-closeout-analysis

./: Analyze_Validation_Error_Log.py  FITBIR Study Closeout Report_Template.docx  README.md  Reformat_QT_2_DR_validation_format.py  StudyCloseout.py  convert_py_2_ipynb.py  create_closeout_scripts_package_version.py  fitbir_analysis_functions.py  pyproject.toml
