[tool.poetry]
name = "study-closeout-analysis"
version = "0.1.0"
description = ""
authors = ["Kevin Armengol <kevin.armengol@publicissapient.com>"]
readme = "README.md"
packages = [{include = "study_closeout_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
loguru = "^0.7.0"
openpyxl = "^3.1.2"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

