[tool.poetry]
name = "study-closeout-analysis"
version = "0.1.0"
description = ""
authors = ["Kevin Armengol <kevin.armengol@publicissapient.com>"]
readme = "README.md"
packages = [{include = "study_closeout_analysis"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
loguru = "^0.7.0"
openpyxl = "^3.1.2"
chardet = "^5.2.0"
pandas = "1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

